--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, h1, h2, ul, li {
+body, h1, h2, ul, li, p {
   padding: 0px;
   margin: 0px;
 }
@@ -33,6 +33,7 @@ body {
   margin-bottom: 40px;
   background-color: #fffffF;
   box-shadow: 0 0 2rem rgba(0,0,0, 0.1);
+  cursor: pointer;
 }
 
 .product_img {
@@ -47,4 +48,97 @@ body {
 
 .product_price {
   color: rgba(0, 0, 0, 0.5)
+}
+
+
+/* MODAL */
+
+.modal::before {
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0,0,0, 0.5)
+}
+
+.modal{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 80px;
+}
+
+.modal_container {
+  position: relative;
+  display: grid;
+  align-items: flex-end;
+  grid-gap: 50px;
+  padding: 0 50px 50px 0;
+  background: linear-gradient(to right, transparent 250px, #fff 250px);
+  z-index: 1;
+}
+
+.modal_img {
+  grid-column: 1;
+  margin-top: 50px;
+  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2)
+}
+
+.modal_img img {
+  display: block;
+  max-width: 300px;
+}
+
+.modal_data {
+  grid-column: 2;
+  max-width: 600px;
+}
+
+.modal_title {
+  font-size: 3rem;
+}
+
+.modal_btn {
+  margin-top: 80px;
+  background: #000;
+  cursor: pointer;
+  color: #fff;
+  border: none;
+  font-size: 1rem;
+  padding: 10px 25px;
+  font-family: 'Noto Serif';
+}
+
+.modal_btn:active {
+  background: #808080;
+}
+
+/* REVIEWS */
+
+.reviews {
+  grid-column: 2;
+}
+
+.review {
+  border-bottom: 1px solid rgba(0,0,0, 0.1);
+  padding-bottom: 20px;
+}
+
+.review_subtitle {
+  font-size: 1.75rem;
+}
+
+.review_description {
+  color: rgba(0,0,0, 0.7);
+  margin: 20px 0 5px 0
+}
+
+.review_user {
+  font-weight: bold;
 }
