--- a/style.css
+++ b/style.css
@@ -82,12 +82,37 @@ body {
   padding: 0 50px 50px 0;
   background: linear-gradient(to right, transparent 250px, #fff 250px);
   z-index: 1;
+  animation: fadeIn .3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3D(50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3D(0px, 0, 0);
+  }
+}
+
+.modal_close {
+  border-radius: 50%;
+  border: 2px solid #000;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2);
+  cursor: pointer;
 }
 
 .modal_img {
   grid-column: 1;
   margin-top: 50px;
-  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2)
+  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2);
 }
 
 .modal_img img {
