--- a/style.css
+++ b/style.css
@@ -20,6 +20,35 @@ body {
   padding: 0 80px;
 }
 
+/* HEADER */
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  max-width: 900px;
+  padding: 20px 0;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 80px
+}
+
+.cart_menu::after {
+  content: "";
+  display: inline-block;
+  background: url("./assets/carrinho.svg") no-repeat center center;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+.cart_menu {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 /* LIST OF PRODUCTS */
 
 .products {
@@ -141,6 +170,10 @@ body {
 }
 
 .modal_btn:active {
+  background: #808080;
+}
+
+.modal_btn.sold-off {
   background: #808080;
 }
 
