--- a/style.css
+++ b/style.css
@@ -200,3 +200,40 @@ body {
 .review_user {
   font-weight: bold;
 }
+
+
+/* ALERT */
+
+.alert {
+  position: absolute;
+  top: 20px;
+  left: 0px;
+  z-index: 10px;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+
+.alert.active {
+  display: block;
+  animation: fadeInDown .3s forwards;
+}
+
+@keyframes fadeInDown {
+  from {
+    transform: translate3d(0, -30px, 0);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0px, 0)
+  }
+}
+
+.alert_msg {
+  background: #fff;
+  display: inline-block;
+  padding: 20px 40px;
+  border: 2px solid #000;
+  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2);
+}
