--- a/style.css
+++ b/style.css
@@ -237,3 +237,95 @@ body {
   border: 2px solid #000;
   box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2);
 }
+
+/* CART */
+
+.cart_modal::before {
+  content: '';
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.cart_modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 20px;
+  display: none;
+}
+
+.cart_modal.active {
+  display: block
+}
+
+.cart_container {
+  position: relative;
+  margin: 80px auto;
+  background: #ffffff;
+  padding: 40px;
+  max-width: 800px;
+  animation: fadeInDown .3s forwards;
+}
+
+.cart_item {
+  display: grid;
+  grid-template-columns: 1fr 1fr 50px;
+  border-bottom: 1px solid rgba(0,0,0, 0.1) ;
+  padding: 10px 0;
+}
+
+.cart_title {
+  margin-bottom: 10px;
+  border-bottom: 2px solid #000000;
+  padding-bottom: 20px;
+}
+
+.cart_remove {
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  background: #ffffff;
+}
+
+.cart_price {
+  text-align: right;
+}
+
+.cart_total {
+  text-align: right;
+  padding: 10px 50px 10px 0;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #000
+}
+
+.cart_close {
+  border-radius: 50%;
+  border: 2px solid #000;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  box-shadow: 0px 3px 4px rgba(0,0,0, 0.1),  0px 4px 10px rgba(0,0,0, 0.2);
+  cursor: pointer;
+}
+
+.cart_checkout {
+  display: block;
+  margin-left: auto;
+  background: #000;
+  cursor: pointer;
+  color: #fff;
+  font-size: 1rem;
+  padding: 10px 25px;
+  border: none;
+  font-family: "Noto Serif";
+}
