--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ body {
   position: absolute;
   top: 20px;
   left: 0px;
-  z-index: 10px;
+  z-index: 10;
   width: 100%;
   text-align: center;
   display: none;
@@ -328,4 +328,80 @@ body {
   padding: 10px 25px;
   border: none;
   font-family: "Noto Serif";
+}
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 900px) {
+  #app {
+    padding: 0 10px;
+  }
+
+  /* LIST OF PRODUCTS */
+
+  .products {
+    margin-top: 40px;
+  }
+
+  .product {
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 300px;
+    margin: 30px auto;
+  }
+
+  .product_info {
+    padding: 20px;
+  }
+
+  .product_img {
+    max-width: 100%
+  }
+
+  .product_title {
+    font-size: 1.5rem;
+  }
+
+  /* MODAL */
+
+  .modal {
+    padding: 10px;
+  }
+
+  .modal_container {
+    grid-gap: 20px;
+    background: #ffffff;
+    padding: 10px 0;
+  }
+
+  .modal_img {
+    grid-row: 2;
+  }
+
+  .modal_img img {
+    width: 100%;
+    max-width: initial;
+  }
+
+  .modal_data {
+    grid-column: 1;
+    padding: 10px;
+  }
+
+  .modal_btn {
+    margin-top: 20px;
+  }
+
+  /* REVIEWS */
+
+  .reviews {
+    grid-column: 1;
+    padding: 10px;
+  }
+
+
+  /* CART MODAL */
+  .cart_modal {
+    padding: 10px;
+  }
 }
